--- a/default/data/ui/views/targets_performance.xml
+++ b/default/data/ui/views/targets_performance.xml
@@ -1,10 +1,5 @@
 <form>
-  <label>Target Perfomance</label>
-  <search id="baseSearch">
-    <query>| `get_xtremio_index` sourcetype=emc:xtremio:rest component=targets "Cluster Name"="$cluster$" content.name= "$target$"  | `get_performance_parameters`</query>
-    <earliest>$earliest$</earliest>
-    <latest>$latest$</latest>
-  </search>
+  <label>Target Performance</label>
   <fieldset submitButton="true" autoRun="true">
     <input type="time" searchWhenChanged="false">
       <default>
@@ -15,36 +10,48 @@
     <input type="dropdown" token="cluster" searchWhenChanged="false">
       <label>Cluster</label>
       <search>
-        <query>| inputlookup XtremIOClusterNameLookup | table "Cluster Name"</query>
-        <earliest>-60m@m</earliest>
-        <latest>now</latest>
+        <query>| inputlookup XtremIOClustersLookup
+| table "Cluster Name"</query>
       </search>
       <fieldForLabel>Cluster Name</fieldForLabel>
       <fieldForValue>Cluster Name</fieldForValue>
     </input>
     <input type="multiselect" token="target" searchWhenChanged="false">
       <label>Targets</label>
-      <!-- The final value will be surrounded by prefix and suffix -->
       <delimiter>" OR content.name= "</delimiter>
       <choice value="*">ALL</choice>
       <search>
-        <query>| inputlookup XtremIOTargetsLookup | search "Cluster Name"="$cluster$" | table "Target Name"</query>
-        <earliest>-60m@m</earliest>
-        <latest>now</latest>
+        <query>| inputlookup XtremIOTargetsLookup
+| search "Cluster Name"="$cluster$"
+| table "Target Name"</query>
       </search>
       <fieldForLabel>Target Name</fieldForLabel>
       <fieldForValue>Target Name</fieldForValue>
     </input>
   </fieldset>
   <row>
+    <panel depends="$neverset$">
+      <title>baseSearch</title>
+      <table>
+        <search id="baseSearch">
+          <query>`xtremio_index_filter` sourcetype=emc:xtremio:rest component=targets "Cluster Name"="$cluster$" content.name="$target$" 
+| `get_performance_parameters`</query>
+          <earliest>$earliest$</earliest>
+          <latest>$latest$</latest>
+        </search>
+        <option name="count">1</option>
+        <option name="refresh.display">progressbar</option>
+      </table>
+    </panel>
+  </row>
+  <row>
     <panel>
       <title>Read Bandwidth history(MB/s)</title>
       <chart>
         <search base="baseSearch">
-          <query>timechart span=10m limit=0  useother=f avg(rd-bw) AS "Read Bandwidth" by content.name</query>
+          <query>| timechart minspan=10m avg(rd-bw) AS "Read Bandwidth" by content.name</query>
         </search>
         <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">undefined</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
@@ -71,7 +78,7 @@
       <title>Write Bandwidth  history(MB/s)</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart span=10m limit=0  useother=f avg(wr-bw) AS "Write Bandwidth" by content.name</query>
+          <query>| timechart minspan=10m avg(wr-bw) AS "Write Bandwidth" by content.name</query>
         </search>
         <option name="charting.chart">line</option>
         <option name="charting.axisY2.enabled">false</option>
@@ -103,10 +110,9 @@
       <title>Read IOPS  history</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart span=10m limit=0  useother=f avg(rd-iops) AS "Read IOPS" by content.name</query>
+          <query>| timechart minspan=10m avg(rd-iops) AS "Read IOPS" by content.name</query>
         </search>
         <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">undefined</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
@@ -133,10 +139,9 @@
       <title>Write IOPS  history</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart span=10m limit=0  useother=f avg(wr-iops) AS "Write IOPS" by content.name</query>
+          <query>| timechart minspan=10m avg(wr-iops) AS "Write IOPS" by content.name</query>
         </search>
         <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">undefined</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
@@ -165,10 +170,9 @@
       <title>Read Latency history(µs)</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart  span=10m limit=0  useother=f avg(rd-latency) AS "Read Latency" by content.name</query>
+          <query>| timechart minspan=10m avg(rd-latency) AS "Read Latency" by content.name</query>
         </search>
         <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">undefined</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
@@ -195,10 +199,9 @@
       <title>Write Latency history(µs)</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart span=10m limit=0   useother=f avg(wr-latency) AS "Write Latency" by content.name</query>
+          <query>| timechart minspan=10m avg(wr-latency) AS "Write Latency" by content.name</query>
         </search>
         <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">undefined</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
