--- a/default/data/ui/views/targets_summary.xml
+++ b/default/data/ui/views/targets_summary.xml
@@ -1,79 +1,84 @@
 <form stylesheet="table_decorations.css">
   <label>Target Summary</label>
-  <search id="baseSearch">
-    <query>| `get_xtremio_index` sourcetype=emc:xtremio:rest component=targets "Cluster Name"="$cluster$"  content.name="$target$"| stats values(content.bw) AS bw values(content.iops) AS iops values(content.avg-latency) AS latency by content.name,_time </query>
-	   <earliest>-15m</earliest>
-       <latest>now</latest>
-   </search>
   <fieldset submitButton="true" autoRun="true">
     <input type="dropdown" token="cluster" searchWhenChanged="false">
       <label>Cluster</label>
       <search>
-        <query>| inputlookup XtremIOClusterNameLookup |  table "Cluster Name"</query>
+        <query>| inputlookup XtremIOClustersLookup
+| table "Cluster Name"</query>
       </search>
-      <earliest>$earliest$</earliest>
-      <latest>$latest$</latest>
       <fieldForLabel>Cluster Name</fieldForLabel>
       <fieldForValue>Cluster Name</fieldForValue>
     </input>
     <input type="dropdown" token="target" searchWhenChanged="false">
       <label>Target</label>
-      <!-- The final value will be surrounded by prefix and suffix -->
-      <populatingSearch fieldForLabel="Target Name" fieldForValue="Target Name">| inputlookup XtremIOTargetsLookup | search "Cluster Name"="$cluster$" | table "Target Name"</populatingSearch>
+      <fieldForLabel>Target Name</fieldForLabel>
+      <fieldForValue>Target Name</fieldForValue>
+      <search>
+        <query>| inputlookup XtremIOTargetsLookup 
+| search "Cluster Name"="$cluster$" 
+| table "Target Name"</query>
+      </search>
     </input>
   </fieldset>
+  <row>
+    <panel depends="$neverset$">
+      <title>baseSearch</title>
+      <table>
+        <search id="baseSearch">
+          <query>`xtremio_index_filter` sourcetype=emc:xtremio:rest component=targets "Cluster Name"="$cluster$" content.name="$target$" 
+| stats values(content.bw) AS bw values(content.iops) AS iops values(content.avg-latency) AS latency by content.name _time</query>
+          <earliest>-60m</earliest>
+          <latest>now</latest>
+        </search>
+        <option name="count">1</option>
+        <option name="refresh.display">progressbar</option>
+      </table>
+    </panel>
+  </row>
   <row>
     <panel>
       <title>Port State</title>
       <single>
         <search>
-          <query>| inputlookup XtremIOTargetsLookup | search "Cluster Name"="$cluster$" "Target Name"="$target$"| table "Port State"</query>
-		<earliest>-1h</earliest>
-    <latest>now</latest>
- 
-	   </search>
+          <query>| inputlookup XtremIOTargetsLookup where "Cluster Name"="$cluster$" "Target Name"="$target$" 
+| table "Port State"</query>
+        </search>
         <option name="drilldown">none</option>
-        <option name="linkView">search</option>
+        <option name="refresh.display">progressbar</option>
       </single>
     </panel>
     <panel>
       <title>Driver Version</title>
       <single>
         <search>
-          <query>| inputlookup XtremIOTargetsLookup | search "Cluster Name"="$cluster$" "Target Name"="$target$"| table "Driver Version"</query>
-       <earliest>-1h</earliest>
-    <latest>now</latest>
- 
-	   </search>
+          <query>| inputlookup XtremIOTargetsLookup where "Cluster Name"="$cluster$" "Target Name"="$target$" 
+| table "Driver Version"</query>
+        </search>
         <option name="drilldown">none</option>
-        <option name="linkView">search</option>
+        <option name="refresh.display">progressbar</option>
       </single>
     </panel>
     <panel>
       <title>Jumbo Frame Enabled</title>
       <single>
         <search>
-          <query>| inputlookup XtremIOTargetsLookup | search "Cluster Name"="$cluster$" "Target Name"="$target$"| table "Jumbo Frame Enabled"</query>
-       <earliest>-1h</earliest>
-    <latest>now</latest>
- 
-	   </search>
+          <query>| inputlookup XtremIOTargetsLookup where "Cluster Name"="$cluster$" "Target Name"="$target$" 
+| table "Jumbo Frame Enabled"</query>
+        </search>
         <option name="drilldown">none</option>
-        <option name="linkView">search</option>
+        <option name="refresh.display">progressbar</option>
       </single>
     </panel>
     <panel>
       <title>Port Address</title>
       <single>
         <search>
-          <query>| inputlookup XtremIOTargetsLookup | search "Cluster Name"="$cluster$" "Target Name"="$target$"| table "Port Address"</query>
-        <earliest>-1h</earliest>
-    <latest>now</latest>
- 
-		</search>
+          <query>| inputlookup XtremIOTargetsLookup where "Cluster Name"="$cluster$" "Target Name"="$target$" 
+| table "Port Address"</query>
+        </search>
         <option name="drilldown">none</option>
-        <option name="classField">Port Address</option>
-        <option name="linkView">search</option>
+        <option name="refresh.display">progressbar</option>
       </single>
     </panel>
   </row>
@@ -81,13 +86,9 @@
     <panel>
       <title>Bandwidth(MB/s)</title>
       <chart>
-         <search base="baseSearch">
-          <earliest>-15m</earliest>
-          <latest>now</latest>
-        <query>| timechart span=1m  latest(bw) AS Bandwidth</query>
+        <search base="baseSearch">
+          <query>| timechart latest(bw) AS Bandwidth</query>
         </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">undefined</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
@@ -96,6 +97,7 @@
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
@@ -107,33 +109,30 @@
         <option name="charting.layout.splitSeries">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-     </chart>
+        <option name="refresh.display">progressbar</option>
+      </chart>
       <html>
        <div class="performance_drilldown">
-            <a href=" /app/EMC-app-XtremIO/targets_performance?form.cluster=$form.cluster$&amp;form.target=$form.target$" target="Target Performance">
-                    View Performance Details
-             </a>
+            <a href="/app/EMC-app-XtremIO/targets_performance?form.cluster=$form.cluster$&amp;form.target=$form.target$" target="Target Performance">View Performance Details</a>
         </div>
       </html>
     </panel>
     <panel>
       <title>IOPS</title>
       <chart>
-         <search base="baseSearch">
-          <earliest>-15m</earliest>
-          <latest>now</latest>
-        <query>|  timechart span=1m   latest(iops) AS "IOPS"</query>
+        <search base="baseSearch">
+          <query>| timechart latest(iops) AS "IOPS"</query>
         </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">undefined</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.text">IOPS</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
@@ -143,26 +142,22 @@
         <option name="charting.chart.style">shiny</option>
         <option name="charting.drilldown">all</option>
         <option name="charting.layout.splitSeries">0</option>
-		 <option name="charting.axisTitleY.text">IOPS</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
-     </chart>
+        <option name="refresh.display">progressbar</option>
+      </chart>
       <html>
        <div class="performance_drilldown">
-            <a href=" /app/EMC-app-XtremIO/targets_performance?form.cluster=$form.cluster$&amp;form.target=$form.target$" target="Target Performance">
-                    View Performance Details
-             </a>
+            <a href="/app/EMC-app-XtremIO/targets_performance?form.cluster=$form.cluster$&amp;form.target=$form.target$" target="Target Performance">View Performance Details</a>
         </div>
       </html>
     </panel>
     <panel>
       <title>Latency(µs)</title>
       <chart>
-        <search base="baseSearch">        
-		<query>|  timechart span=1m latest(latency) AS "latency"</query>
+        <search base="baseSearch">
+          <query>| timechart latest(latency) AS "latency"</query>
         </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">undefined</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
@@ -171,6 +166,7 @@
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
@@ -182,12 +178,11 @@
         <option name="charting.layout.splitSeries">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
         <option name="charting.legend.placement">right</option>
+        <option name="refresh.display">progressbar</option>
       </chart>
       <html>
        <div class="performance_drilldown">
-            <a href=" /app/EMC-app-XtremIO/targets_performance?form.cluster=$form.cluster$&amp;form.target=$form.target$" target="Target Performance">
-                    View Performance Details
-             </a>
+            <a href=" /app/EMC-app-XtremIO/targets_performance?form.cluster=$form.cluster$&amp;form.target=$form.target$" target="Target Performance">View Performance Details</a>
         </div>
       </html>
     </panel>
