--- a/default/data/ui/views/volumes_performance.xml
+++ b/default/data/ui/views/volumes_performance.xml
@@ -1,10 +1,5 @@
 <form>
   <label>Volume Performance</label>
-  <search id="baseSearch">
-    <query>| `get_xtremio_index` sourcetype=emc:xtremio:rest component=volumes "Cluster Name"="$cluster$" content.name = "$volume$" | `get_performance_parameters`</query>
-    <earliest>$earliest$</earliest>
-    <latest>$latest$</latest>
-  </search>
   <fieldset submitButton="True" autoRun="true">
     <input type="time" searchWhenChanged="false">
       <default>
@@ -15,36 +10,58 @@
     <input type="dropdown" token="cluster" searchWhenChanged="false">
       <label>Cluster</label>
       <search>
-        <query>| inputlookup XtremIOClusterNameLookup | table "Cluster Name"</query>
+        <query>| inputlookup XtremIOClustersLookup
+| table "Cluster Name"</query>
       </search>
       <fieldForLabel>Cluster Name</fieldForLabel>
       <fieldForValue>Cluster Name</fieldForValue>
     </input>
     <input type="multiselect" token="volume" searchWhenChanged="false">
       <label>Volumes</label>
-      <!-- The final value will be surrounded by prefix and suffix -->
       <delimiter>" OR content.name="</delimiter>
       <choice value="*">ALL</choice>
-      <populatingSearch fieldForLabel="Volume Name" fieldForValue="Volume Name">| inputlookup XtremIOVolumesLookup | search "Cluster Name"="$cluster$" | table "Volume Name"</populatingSearch>
+      <search>
+        <query>| inputlookup XtremIOVolumesLookup
+| search "Cluster Name"="$cluster$"
+| table "Volume Name"</query>
+      </search>
+      <fieldForLabel>Volume Name</fieldForLabel>
+      <fieldForValue>Volume Name</fieldForValue>
     </input>
   </fieldset>
+  <row>
+    <panel depends="$neverset$">
+      <title>baseSearch</title>
+      <table>
+        <search id="baseSearch">
+          <query>`xtremio_index_filter` sourcetype=emc:xtremio:rest component=volumes "Cluster Name"="$cluster$" content.name="$volume$" 
+| `get_performance_parameters`</query>
+          <earliest>$earliest$</earliest>
+          <latest>$latest$</latest>
+        </search>
+        <option name="count">1</option>
+        <option name="refresh.display">progressbar</option>
+      </table>
+    </panel>
+  </row>
   <row>
     <panel>
       <title>Read Bandwidth  history(MB/s)</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart span=10m  limit=0 useother=f avg(rd-bw) AS "Read Bandwidth" by content.name</query>
+          <query>| timechart minspan=10m avg(rd-bw) AS "Read Bandwidth" by content.name</query>
         </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">false</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.text">Bandwidth</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
@@ -52,29 +69,28 @@
         <option name="charting.chart.sliceCollapsingThreshold">0.01</option>
         <option name="charting.chart.stackMode">default</option>
         <option name="charting.chart.style">shiny</option>
-        <option name="charting.drilldown">cell</option>
         <option name="charting.layout.splitSeries">0</option>
-        <option name="charting.axisTitleY.text">Bandwidth</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
-        <option name="charting.legend.placement">right</option>
+        <option name="charting.legend.placement">bottom</option>
       </chart>
     </panel>
     <panel>
       <title>Write Bandwidth history(MB/s)</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart span=10m  limit=0 useother=f avg(wr-bw) AS "Write Bandwidth" by content.name</query>
+          <query>| timechart minspan=10m avg(wr-bw) AS "Write Bandwidth" by content.name</query>
         </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">false</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.text">Bandwidth</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
@@ -84,9 +100,8 @@
         <option name="charting.chart.style">shiny</option>
         <option name="charting.drilldown">all</option>
         <option name="charting.layout.splitSeries">0</option>
-        <option name="charting.axisTitleY.text">Bandwidth</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
-        <option name="charting.legend.placement">right</option>
+        <option name="charting.legend.placement">bottom</option>
       </chart>
     </panel>
   </row>
@@ -95,18 +110,19 @@
       <title>Read IOPS  history</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart span=10m  limit=0 useother=f avg(rd-iops) AS "Read IOPS" by content.name</query>
+          <query>| timechart minspan=10m avg(rd-iops) AS "Read IOPS" by content.name</query>
         </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">false</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.text">IOPS</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
@@ -116,27 +132,27 @@
         <option name="charting.chart.style">shiny</option>
         <option name="charting.drilldown">all</option>
         <option name="charting.layout.splitSeries">0</option>
-        <option name="charting.axisTitleY.text">IOPS</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
-        <option name="charting.legend.placement">right</option>
+        <option name="charting.legend.placement">bottom</option>
       </chart>
     </panel>
     <panel>
       <title>Write IOPS  history</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart span=10m  limit=0 useother=f avg(wr-iops) AS "Write IOPS" by content.name</query>
+          <query>| timechart minspan=10m avg(wr-iops) AS "Write IOPS" by content.name</query>
         </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">false</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
         <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.text">IOPS</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
@@ -146,9 +162,8 @@
         <option name="charting.chart.style">shiny</option>
         <option name="charting.drilldown">all</option>
         <option name="charting.layout.splitSeries">0</option>
-        <option name="charting.axisTitleY.text">IOPS</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
-        <option name="charting.legend.placement">right</option>
+        <option name="charting.legend.placement">bottom</option>
       </chart>
     </panel>
   </row>
@@ -157,18 +172,21 @@
       <title>Read Latency history(µs)</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart span=10m  limit=0 useother=f avg(rd-latency) AS  "Read Latency" by content.name</query>
+          <query>| timechart minspan=10m avg(rd-latency) AS  "Read Latency" by content.name</query>
         </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">false</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisLabelsY.majorUnit">10</option>
         <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.text">Latency</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
+        <option name="charting.axisY.minimumNumber">50</option>
         <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
@@ -179,29 +197,27 @@
         <option name="charting.drilldown">all</option>
         <option name="charting.layout.splitSeries">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
-        <option name="charting.legend.placement">right</option>
-        <option name="charting.axisLabelsY.majorUnit">2</option>
-        <option name="charting.axisTitleY.text">Latency</option>
-        <option name="charting.axisY.maximumNumber">400</option>
-        <option name="charting.axisY.minimumNumber">50</option>
+        <option name="charting.legend.placement">bottom</option>
       </chart>
     </panel>
     <panel>
       <title>Write Latency history (µs)</title>
       <chart>
         <search base="baseSearch">
-          <query>| timechart  span=10m  limit=0 useother=f avg(wr-latency) AS  "Write Latency" by content.name</query>
+          <query>| timechart minspan=10m avg(wr-latency) AS  "Write Latency" by content.name</query>
         </search>
-        <option name="charting.chart">line</option>
-        <option name="charting.axisY2.enabled">false</option>
         <option name="charting.axisLabelsX.majorLabelStyle.overflowMode">ellipsisNone</option>
         <option name="charting.axisLabelsX.majorLabelStyle.rotation">0</option>
+        <option name="charting.axisLabelsY.majorUnit">10</option>
         <option name="charting.axisTitleX.visibility">visible</option>
+        <option name="charting.axisTitleY.text">Latency</option>
         <option name="charting.axisTitleY.visibility">visible</option>
         <option name="charting.axisTitleY2.visibility">visible</option>
         <option name="charting.axisX.scale">linear</option>
         <option name="charting.axisY.scale">linear</option>
+        <option name="charting.axisY2.enabled">0</option>
         <option name="charting.axisY2.scale">inherit</option>
+        <option name="charting.chart">line</option>
         <option name="charting.chart.bubbleMaximumSize">50</option>
         <option name="charting.chart.bubbleMinimumSize">10</option>
         <option name="charting.chart.bubbleSizeBy">area</option>
@@ -212,11 +228,7 @@
         <option name="charting.drilldown">all</option>
         <option name="charting.layout.splitSeries">0</option>
         <option name="charting.legend.labelStyle.overflowMode">ellipsisMiddle</option>
-        <option name="charting.legend.placement">right</option>
-        <option name="charting.axisLabelsY.majorUnit">2</option>
-        <option name="charting.axisTitleY.text">Latency</option>
-        <option name="charting.axisY.maximumNumber">500</option>
-        <option name="charting.axisY.minimumNumber">50</option>
+        <option name="charting.legend.placement">bottom</option>
       </chart>
     </panel>
   </row>
